--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,15 @@ jobs:
       - name: Generate `config.json` with API Key
         run: |
           echo '{ "OPENAI_API_KEY": "${{ secrets.OPENAI_API_KEY }}" }' > config.json
-
+      
+      - name: Debug
+        run: ls -alR  # ✅ Print all files for debugging
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           name: github-pages
           path: .
-          if-no-files-found: error  # Prevent silent failures
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,3 +46,5 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
+        with:
+          artifact_name: github-pages
