--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,9 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-
-    steps:
+    
+          path: './dist'
+    
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
-        with:
-          artifact_name: github-pages
+        id: deployment
+        uses: actions/deploy-pages@v4`
