--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,21 +21,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      
+
+      # 🔹 Inject GitHub Secret into a JSON file
       - name: Generate `config.json` with API Key
         run: |
           echo '{ "OPENAI_API_KEY": "${{ secrets.OPENAI_API_KEY }}" }' > config.json
@@ -43,7 +32,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'  # Ensure this matches your build output folder
+          path: '.'  # ✅ Upload all files including config.json
 
       - name: Deploy to GitHub Pages
         id: deployment
